# claude-code-companion

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs
src/process/: launcher.rs
src/protocol/: types.rs
src/server/: ws_server.rs
src/ui/: commands.rs  event_loop.rs  input.rs  keybindings.rs  mod.rs  renderer.rs
