[package]
name = "claude-code-companion"
version = "0.1.0"
edition = "2021"
description = "Terminal companion for Claude Code"
license = "MIT"
repository = "https://github.com/kxbnb/claude-code-companion"
authors = ["kxbnb"]
keywords = ["tui", "claude", "terminal", "companion"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
crossterm = { version = "0.28", features = ["event-stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
unicode-width = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dirs = "5"
chrono = "0.4"
http = "1"
anyhow = "1"
